--- a/index.html
+++ b/index.html
@@ -20,41 +20,51 @@
       </div>
     </nav>
     <div class="hero">
-      <h1>This website is awesome</h1>
-      <p>This website has some subtext that goes here under the main title.  It's smaller font and the color is lower contrast.</p>
+      <div class="hero-left">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title.  It's smaller font and the color is lower contrast.</p>
       <button type="button">Sign up</button>
+      </div>
       <p class="placeholder">this is a placeholder for an image
     </div>
   </header>
-  <section class="random-info">
-    <h2>Some random information.</h2>
-    <div class="grid">
-      <div class="grid-item">
-        <img>
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="grid-item">
-        <img>
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="grid-item">
-        <img>
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="grid-item">
-        <img>
-        <p>this is some subtext under an illustration or image</p>
-      </div>
+  <section>
+    <div class="random-info">
+      <h2>Some random information.</h2>
+      <div class="grid">
+        <div class="grid-item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="grid-item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="grid-item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="grid-item">
+          <img>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
     </div>
   </section>
-  <section class="quote">
-    <q>This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people actually read it.  Who knows?  All I know is that it looks nice.</q>
-    <p class="quote-credit"> -Thor, God of Thunder</p>
+  <section>
+    <div class="quote">
+      <p class="quote-block">This is an inspiring quote, or a testimonial from a customer.  Maybe it's just filling up space, or maybe people actually read it.  Who knows?  All I know is that it looks nice.</p>
+      <p class="quote-credit"> -Thor, God of Thunder</p>
+    </div>
   </section>
   <section class="action">
-    <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button type="button">Sign up</button>
+    <div class="container">
+      <div class="action-left">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <button type="button" class="white-border">Sign up</button>
+    </div>
   </section>
   <footer>
     <p>Copyright &copy The Odin Project 2021</p>
