--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hero">
       <div class="hero-left">
         <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title.  It's smaller font and the color is lower contrast.</p>
+        <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
       <button type="button">Sign up</button>
       </div>
       <p class="placeholder">this is a placeholder for an image
@@ -69,6 +69,5 @@
   <footer>
     <p>Copyright &copy The Odin Project 2021</p>
   </footer>
-
 </body>
 </html>
